# flux

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  __cstd.pi  a.out  ast.txt  cstd.ll  cstd.pi  go.mod  go.sum  grammar  lexer.cpp  lexer.h  llvm_ir  llvm_ir.s  main  main.cpp  main.ll  main.pi  main.ss  math.ss  mir  module  module.bc  module.ll  oldCMakeLists.txt  out  out.ll  output.asm  parser.cpp  parser.h  parserold.cpp  parserold.h  pi.ungram  rustfmt.toml  snake_to_camel.py  (+16 more)
compiler/flux/: Cargo.toml
compiler/flux-codegen/: Cargo.toml
compiler/flux-codegen/oldsrc/: lib.rs  type_expr.rs
compiler/flux-codegen/src/: lib.rs
compiler/flux-depend/: Cargo.toml
compiler/flux-depend/src/: lib.rs
compiler/flux-hir/: Cargo.toml
compiler/flux-hir/src/: database.rs  hir.rs  lib.rs  lower.rs  print.rs
compiler/flux-lsp/: Cargo.toml
compiler/flux-lsp/src/: capabilities.rs  completion.rs  lib.rs  main.rs  position.rs  semantic_tokens.rs
compiler/flux-parser/: Cargo.toml
compiler/flux-parser/benches/: parser_benchmark.rs
compiler/flux-parser/src/: errors.rs  event.rs  lib.rs  sink.rs  source.rs
compiler/flux-syntax/: Cargo.toml
compiler/flux-syntax/src/: ast.rs  builder.rs  syntax_kind.rs
compiler/flux-typesystem/: Cargo.toml
compiler/flux-typesystem/src/: check.rs  infer.rs  lib.rs  type.rs
compiler/flux/src/: cfg.rs  commands.rs  diagnostics.rs  driver.rs  lib.rs  main.rs  module_tree.rs  tests.rs
compiler/flux_db/: Cargo.toml
compiler/flux_db/src/: lib.rs
compiler/flux_hir/: Cargo.toml
compiler/flux_hir/_src/: _tchk.rs  hir.rs  item_scope.rs  lib.rs  lower.rs  package_defs.rs  tchk.rs  type_interner.rs
compiler/flux_hir/benches/: file_generator.py  my_benchmark.rs
compiler/flux_hir/src/: _diagnostics.rs  body.rs  builtin.rs  cfg.rs  common_lower.rs  def.rs  diagnostics.rs  hir.rs  intrinsics.rs  item.rs  item_bodies.rs  item_scope.rs  item_tree.rs  lib.rs  lower.rs  module.rs  name_res.rs  package.rs  package_defs.rs  per_ns.rs  pkg.rs  prelude.rs  prettyprint.rs  source_id.rs  tests.rs  traits.rs  type_interner.rs
compiler/flux_parser/: Cargo.toml
compiler/flux_parser/benches/: bench.flx  parse.rs
compiler/flux_parser/src/: diagnostics.rs  event.rs  grammar.rs  lib.rs  marker.rs  parser.rs  sink.rs  source.rs  token_set.rs
compiler/flux_proc_macros/: Cargo.toml
compiler/flux_proc_macros/src/: ast.rs  attr.rs  diagnostics.rs  expand.rs  lib.rs  parse.rs  typesystem.rs
compiler/flux_typesystem/: Cargo.toml
compiler/flux_typesystem/_src/: check.rs  fmt.rs  lib.rs  prettyprint.rs  trait.rs
compiler/flux_typesystem/formalized/: typesystem.tex
compiler/flux_typesystem/src/: check.rs  constraint.rs  diagnostics.rs  env.rs  fmt.rs  infer.rs  intern.rs  lib.rs  methods.rs  name_res.rs  resolve.rs  scope.rs  tenv.rs  tests.rs  trait.rs  trait_solver.rs  type.rs  unify.rs
compiler/flux_typesystem/tests/: helpers.rs  unify.rs
flux/: Cargo.toml
flux-driver/: Cargo.toml
flux-driver/src/: lib.rs
flux-hir/: Cargo.toml
flux-hir/src/: database.rs  lib.rs
flux-lexer/: Cargo.toml
flux-lexer/_src/: lib.rs  tests.rs
flux-lexer/src/: lib.rs  token_kind.rs
flux-lexer/src/snapshots/: flux_lexer__tests__parse_float_addition.snap  flux_lexer__tests__parse_float_sep.snap  flux_lexer__tests__parse_prim_ty_un.snap
flux-parser/: Cargo.toml
flux-parser/_src/: decl.rs  expr.rs  lib.rs  stmt.rs
flux-parser/benches/: parser_benchmark.rs
flux-parser/src/: event.rs  lib.rs  sink.rs  source.rs
flux-parser/src/grammar/: decl.rs  expr.rs  mod.rs  stmt.rs
flux-parser/src/parser/: mod.rs
flux-parser/tests/: expr.rs  full_programs.rs
flux-parser/tests/snapshots/: expr__parse_basic_literals_b10_int_neg_sep.snap  expr__parse_basic_literals_b10_int_sep.snap  expr__parse_basic_literals_b2_int.snap  expr__parse_basic_literals_b2_int_neg.snap  expr__parse_basic_literals_b2_int_sep.snap  expr__parse_basic_literals_b8_int_sep.snap  expr__parse_basic_literals_float_neg.snap  expr__parse_basic_literals_float_neg_sep.snap  expr__parse_basic_literals_float_sep.snap  expr__parse_binops_cmp_eq.snap  expr__parse_binops_cmp_gt.snap  expr__parse_binops_double_colon.snap  expr__parse_binops_int_div.snap  expr__parse_binops_int_plus.snap  expr__parse_ident.snap  expr__parse_ident_nums_seps.snap  expr__parse_types_prims_f32.snap  expr__parse_types_prims_f64.snap  expr__parse_types_prims_i64.snap  expr__parse_types_prims_i8.snap  expr__parse_types_prims_u16.snap  expr__parse_types_prims_u32.snap  expr__parse_types_ptr_ident.snap  expr__parse_types_ptr_prim.snap
flux-parser/tests/test-data/: function.pi
flux-typecheck/: Cargo.toml
flux-typecheck/oldoldsrc/: expr.rs  lib.rs  visitor.rs
flux-typecheck/oldsrc/: apply.rs  expr.rs  lib.rs  stmt.rs
flux-typecheck/src/: apply.rs  expr.rs  lib.rs  tests.rs
flux-typecheck/src/snapshots/: flux_typecheck__tests__parse_basic.snap  flux_typecheck__tests__parse_basic.snap.new  flux_typecheck__tests__parse_basic_dependency.snap.new  flux_typecheck__tests__parse_function_call_change_var_types.snap.new
flux/src/: dependencies.rs  main.rs
lsp/flux-lsp/: Cargo.toml
lsp/flux-lsp/src/: capabilities.rs  completion.rs  lib.rs  main.rs  semantic_tokens.rs
pi/: Cargo.toml
pi-ast/: Cargo.toml
pi-ast/src/: lib.rs  print.rs
pi-codegen/: Cargo.toml
pi-codegen/oldsrc/: val_mapping.rs
pi-codegen/src/: lib.rs  temp_data.rs  type_expr.rs  val_expr.rs
pi-parser/: Cargo.toml
pi-parser/_src/: decl.rs  lib.rs  stmt.rs
pi-parser/src/: decl.rs  event.rs  expr.rs  lib.rs  sink.rs  source.rs  stmt.rs  tests.rs  token.rs  utils.rs
pi-parser/src/grammar/: decl.rs  expr.rs  mod.rs  stmt.rs
pi-parser/src/parser/: marker.rs  mod.rs
pi-parser/test-data/snapshots/: pi_parser__tests__parse_basic_literals_b10_int.snap  pi_parser__tests__parse_basic_literals_b10_int_neg.snap  pi_parser__tests__parse_basic_literals_b10_int_sep.snap  (+53 more)
pi-parser/tests/: expr.rs  full_programs.rs
pi/src/: main.rs
src/compiler/: CMakeLists.txt
tests/: CMakeLists.txt  lexer_test.ss  tests.cpp
(+693 files in other folders)
