[package]
name = "flux-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-error = { path = "../flux-error" }
flux-syntax = { path = "../flux-syntax" }
flux-parser = { path = "../flux-parser" }
flux-hir = { path = "../flux-hir" }
flux-depend = { path = "../flux-depend" }
