[package]
name = "flux-hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-syntax = { path = "../flux-syntax" }
flux-error = { path = "../flux-error" }
smol_str = "0.1.21"
la-arena = "0.2.0"
indexmap = "1.8.1"
