[package]
name = "flux-lexer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
text-size = "1.0.0"

[dev-dependencies]
insta = "1.14.0"
paste = "1.0.7"

[build-dependencies]
cc = "1.0"
nasm-rs = "0.2.4"
