[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-parser = { path = "../flux-parser" }
flux-syntax = { path = "../flux-syntax" }
flux-hir = { path = "../flux-hir" }
flux-error = { path = "../flux-error" }
indexmap = "1.8.1"
