[package]
name = "pi-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pi-syntax = { path = "../pi-syntax" }

# pi-lexer = { path = "../pi-lexer" }
# pi-error = { path = "../pi-error" }
# smol_str = "0.1.21"
# indexmap = { version = "1.8.1", features = ["serde-1"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
