[package]
name = "pi-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pi-error = { path = "../pi-error" }
pi-lexer = { path = "../pi-lexer" }
pi-ast = { path = "../pi-ast" }
smol_str = "0.1.21"
indexmap = "1.8.1"

[dev-dependencies]
insta = "1.14.0"
paste = "1.0.7"
