[package]
name = "pi-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pi-error = { path = "../pi-error" }
pi-lexer = { path = "../pi-lexer" }
pi-syntax = { path = "../pi-syntax" }
smol_str = "0.1.21"
indexmap = "1.8.1"
rowan = "0.15.4"
logos = "0.12.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
drop_bomb = "0.1.5"
text-size = "1.0.0"

[dev-dependencies]
insta = "1.14.0"
paste = "1.0.7"
