[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pi-parser = { path = "../pi-parser" }
pi-syntax = { path = "../pi-syntax" }
pi-hir = { path = "../pi-hir" }
pi-error = { path = "../pi-error" }
