[package]
name = "flux-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-cfg = { path = "../flux-cfg" }
flux-mir = { path = "../flux-mir" }
smol_str = "0.1.21"
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
indexmap = "1.7.0"
