[package]
name = "flux-depend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-syntax = { path = "../flux-syntax" }
flux-parser = { path = "../flux-parser" }
flux-error = { path = "../flux-error" }
flux-hir = { path = "../flux-hir" }
petgraph = "0.6.1"
smol_str = "0.1.23"
