[package]
name = "flux-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-error = { path = "../flux-error" }
flux-parser = { path = "../flux-parser" }
flux-hir = { path = "../flux-hir" }
flux-syntax = { path = "../flux-syntax" }
tower-lsp = "0.17.0"
tokio = { version = "1", features = ["full"] }
dashmap = "5.3.3"
smol_str = "0.1.23"
text-size = "1.1.0"
rowan = "0.15.4"
