[package]
name = "flux-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-lexer = { path = "../flux-lexer" }
flux-error = { path = "../flux-error" }
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.15.4"
ungrammar = "1.16.1"
smol_str = "0.1.21"
quote = "1.0.2"
anyhow = "1.0.8"
