[package]
name = "flux-typesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-syntax = { path = "../flux-syntax" }
flux-span = { path = "../flux-span" }
flux-error = { path = "../flux-error" }
smol_str = "0.1.21"
ariadne = "0.1.5"
itertools = "0.10.3"
