[package]
name = "flux-typesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-syntax = { path = "../flux-syntax" }
flux-span = { path = "../flux-span" }
flux-error = { path = "../flux-error" }
smol_str = "0.1.21"
ariadne = "0.1.5"
itertools = "0.10.3"
indexmap = "1.9.1"
tracing = "0.1.36"

[dev-dependencies]
text-size = "1.1.0"
insta = "1.16.0"
paste = "1.0.7"
