[package]
name = "flux"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-tree = "0.3.0"
# itertools = "0.12.0"
# la-arena = "0.3.0"
toml = "0.8.8"
serde = { version = "1.0.159", features = ["derive"] }
clap = { version = "4.2.5", default-features = true, features = ["std", "derive"] }
pretty = "0.12.1"

flux_db = { path = "../flux_db" }
flux_hir = { path = "../flux_hir" }
flux_cfg = { path = "../flux_cfg" }
flux_diagnostics = { path = "../flux_diagnostics" }
# flux_hir = { path = "../flux_hir" }
# flux_typesystem = { path = "../flux_typesystem" }
salsa = { path = "../../lib/salsa" }
