[package]
name = "flux"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.2.5", default-features = true, features = ["std", "derive"] }
toml = "0.8.8"
serde = { version = "1.0.159", features = ["derive"] }
lasso = { version = "0.7.2", features = ["multi-threaded"] }

flux_diagnostics = { path = "../flux_diagnostics" }
flux_util = { path = "../flux_util" }
flux_id = { path = "../flux_id" }
flux_hir = { path = "../flux_hir" }
