[package]
name = "flux_db"
version = "0.1.0"
edition = "2021"

[dependencies]
flux_hir = { path = "../flux_hir" }
flux_span = { path = "../flux_span" }
flux_proc_macros = { path = "../flux_proc_macros" }
flux_diagnostics = { path = "../flux_diagnostics" }
flux_parser = { path = "../flux_parser" }
salsa = { path = "../../lib/salsa" }
