[package]
name = "flux_hir"
version = "0.1.0"
edition = "2021"

[dependencies]
la-arena = "0.3.0"
lasso = "0.6.0"
text-size = "1.1.0"
itertools = "0.10.5"
tinyvec = { version = "1.6.0", features = ["alloc"] }
tracing = "0.1.37"
hashbrown = "0.13.1"
dashmap = { version = "5.4.0", features = ["raw-api"] }

flux_span = { path = "../flux_span" }
flux_syntax = { path = "../flux_syntax" }
flux_typesystem = { path = "../flux_typesystem" }
flux_parser = { path = "../flux_parser" }
flux_diagnostics = { path = "../flux_diagnostics" }
flux_proc_macros = { path = "../flux_proc_macros" }

[dev-dependencies]
flux_parser = { path = "../flux_parser" }
once_cell = "1.15.0"
owo-colors = "3.5.0"
insta = "1.15.0"
paste = "1.0.9"
pretty = "0.11.3"
strip-ansi-escapes = "0.1.1"