[package]
name = "flux_hir"
version = "0.1.0"
edition = "2021"

[dependencies]
la-arena = "0.3.1"
extension-trait = "1.0.2"
text-size = "1.1.1"
lasso = { version = "0.7.2", features = ["multi-threaded"] }
cstree = { version = "0.12.0", features = ["multi_threaded_interning"] }
tracing = "0.1.37"
itertools = "0.13.0"
ascii_tree = "0.1.1"
pretty = "0.12.3"
colored = "2.1.0"

flux_span = { path = "../flux_span" }
flux_parser = { path = "../flux_parser" }
flux_syntax = { path = "../flux_syntax" }
flux_diagnostics = { path = "../flux_diagnostics" }
flux_proc_macros = { path = "../flux_proc_macros" }
flux_typesystem = { path = "../flux_typesystem" }

[dev-dependencies]
paste = "1.0.15"
insta = "1.39.0"
