[package]
name = "flux_hir"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.15"
tracing = "0.1.37"
itertools = "0.13.0"

flux_proc_macros = { path = "../flux_proc_macros" }
flux_diagnostics = { path = "../flux_diagnostics" }
flux_util = { path = "../flux_util" }
flux_id = { path = "../flux_id" }
flux_parser = { path = "../flux_parser" }
flux_typesystem = { path = "../flux_typesystem" }
