[package]
name = "flux_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
cstree = "0.11.1"
smallvec = "1.10.0"
lasso = { version = "0.6.0", features = ["multi-threaded"] }

flux_lexer = { path = "../flux_lexer" }
flux_syntax = { path = "../flux_syntax" }
flux_diagnostics = { path = "../flux_diagnostics" }
flux_span = { path = "../flux_span" }

[dev-dependencies]
strip-ansi-escapes = "0.1.1"
insta = "1.29.0"
paste = "1.0.12"
once_cell = "1.17.1"