[package]
name = "flux_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
cstree = "0.12.0"
extension-trait = "1.0.2"

flux_lexer = { path = "../flux_lexer" }
flux_syntax = { path = "../flux_syntax" }
flux_diagnostics = { path = "../flux_diagnostics" }
flux_span = { path = "../flux_span" }
salsa = { path = "../../lib/salsa" }

[dev-dependencies]
text-size = "1.1.1"
insta = "1.34.0"
paste = "1.0.14"

flux_db = { path = "../flux_db" }
