[package]
name = "flux_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
cstree = { version = "0.12.0", features = ["multi_threaded_interning"] }
lasso = { version = "0.7.2", features = ["multi-threaded"] }

flux_lexer = { path = "../flux_lexer" }
flux_syntax = { path = "../flux_syntax" }
flux_diagnostics = { path = "../flux_diagnostics" }
flux_span = { path = "../flux_span" }

[dev-dependencies]
text-size = "1.1.1"
insta = "1.34.0"
paste = "1.0.14"
