[package]
name = "flux_typesystem"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
pretty = "0.12.3"
colored = "2.1.0"
tracing = "0.1.37"

flux_diagnostics = { path = "../flux_diagnostics" }
flux_span = { path = "../flux_span" }
flux_proc_macros = { path = "../flux_proc_macros" }
